# ChangeLog for dev-util/open-vcdiff
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/open-vcdiff/ChangeLog,v 1.5 2012/12/22 23:57:14 floppym Exp $

  22 Dec 2012; Mike Gilbert <floppym@gentoo.org> +files/0.8.3-system-libs.patch,
  -files/open-vcdiff-0.8.3-system-zlib.patch, open-vcdiff-0.8.3.ebuild:
  Unbundle gflags and gtest.

  22 Dec 2012; Mike Gilbert <floppym@gentoo.org> open-vcdiff-0.8.3.ebuild:
  Depend on zlib.

  22 Dec 2012; Mike Gilbert <floppym@gentoo.org>
  +files/open-vcdiff-0.8.3-system-zlib.patch, open-vcdiff-0.8.3.ebuild:
  Unbundle zlib.

  22 Dec 2012; Mike Gilbert <floppym@gentoo.org> open-vcdiff-0.8.3.ebuild:
  Keyword ~x86.

*open-vcdiff-0.8.3 (22 Dec 2012)

  22 Dec 2012; Mike Gilbert <floppym@gentoo.org> +metadata.xml,
  +open-vcdiff-0.8.3.ebuild:
  New package.