@@ -3,13 +3,15 @@ Hash: SHA256
 
 AUX 0.8.3-system-libs.patch 8778 SHA256 e393653b326daf17bb6bc92ded56daa6c11a4afec6d2600ef8b7ed1043a0dfbc SHA512 82af2a16f83fd03a4afc731a50e222178888f0c8a78313835d7ec4bd367c32d0dc1bee486f344aa511394532e56cd03a400771008596d90bb4ce01b1baae2471 WHIRLPOOL 616ecc1c6f48bd03ae48a18685e065ce0f1411449e2054b5c248f45a85e098b58d2795613ed88b70d94e0b4c7066fecaccccdc651dbdba08f5ada5dff2cd5ed6
 DIST open-vcdiff-0.8.3.tar.gz 757271 SHA256 b7e47db78866082e9e8b5782f5491092c8414f0acc0440aea03b14c7d1d3c371 SHA512 7f0712aa9f08b19658fbc77f28e6dde9f4a45a4be8f97fb00db1ca78f5ee4e7b9f333dc3208e9ba85b5696a24fa30865397c096be1687d73048809cd30e12a55 WHIRLPOOL 90d75d62c7eceae74639c2105cae98bd148b02c7c83d169a71f094d8f30829ed736b8d8fb43ecef06657ce8b10b8dfaf0f98b439dd170a4a0259e9dd4f035977
+DIST open-vcdiff-0.8.4.tar.gz 780923 SHA256 2b142b1027fb0a62c41347600e01a53fa274dad15445a7da48083c830c3138b3 SHA512 fb9062d6a854c999d04eb68672596583e958c3d1705d58429280cb53dcf381c880b23d7fc9d5277545b4a5f9023435648d7bc87bad10cb30385fb950e5d499bd WHIRLPOOL fbbb26f6aa3773bb06c33085bc1d2f1e2bd74776466864713b06567806eca815f80d72d8872487359ffa99102f8914948d20b37a2b4e3bf502a03ca7de029a8a
 EBUILD open-vcdiff-0.8.3.ebuild 871 SHA256 65256589d30922526fa4b81e7d5a4a337e50c0a91d8131e5a62c27f49c63e0ea SHA512 f05a232518239ddd105a9dd967ba87a69a2820548b8c9e0fb011dcb24b998b94e7e2e8a38fed92a95767da59930970943cc28921bb5a88051f414c4feda811fc WHIRLPOOL a52f07eb44d1a9f821a94febcf358fa61fe8efdabc9cb5828a9efe963c503c0b826be11dafc80601c92606bc7341f66845712ef1d1869498c1d56e282858bb19
-MISC ChangeLog 864 SHA256 1ec7228d5e35c74663dff31908f9b90c676da853615dedcec9063254d728f54e SHA512 d6fcd407af6a35bbca33db5e5db87751ee824587f930df166384cd5a4f56305d3b4d601a58c1d50880a54f04d1b23c87b99aa33db0f3fac26e03427b95068c54 WHIRLPOOL f8dfd21e3c37341378695343ec610f9854cbe6fae80f81c50b9fc1dc0d9d01df75fc5949da97d0c5544945fbf963c479f2b1fe05ff97a70bd0527c2a2aba5e8d
+EBUILD open-vcdiff-0.8.4.ebuild 604 SHA256 9dbf9e024c12025329cc583351e2847cd3a06a9a69a635507bcda2ecdc95fda0 SHA512 8732bc2d11f9cbc5ac22f04c41796631e626f934c3cf8cc6535c9f775c8364eff93a4d192103acfcdf2b0a54db696f11332795606054f91df80c5ff6e1db96e9 WHIRLPOOL b56b2c1222816dbcd7cb5df6717e2c76db14c2cbd3478e3cdce1e0e54af864e5f56468d19cb99f660e63ef232b62b619512fdb4e65c4101515370d9fd0f27f9f
+MISC ChangeLog 991 SHA256 8cdf32b8dc6caf763311f18c70a75cab7ef9a8e4230a2a9f5b47ef20bcb09541 SHA512 b3f8907ec5034dd004b6aa46c5c55630a0f4eb9c7b2127a3144e85759d446cfb5d402cfb30c5c856dd72a2f1a985f36d8d57a0a7c8696ab5e75ca7c53e97f2aa WHIRLPOOL 71cbf8a8c3e743f2a9be070a179399af36bd5a41b2aaffa875c217b1d1c102f04a2e2a47f5c51b4fa702a336ca505f21652e1903a68e8e5aa14e5b4ebd8fec0c
 MISC metadata.xml 313 SHA256 0a6a7aca14baca831db8c03f56755a97301845bba9b3afa88e619f7bce6529ff SHA512 694d4f17627fa226c3c4c49314b1cd863af1ecfd08d44b0b0012bd18dacddf0ac5f6a3ab6a8291a43a4ffdb5e87e49cca28a28e527a6d7be6744630aaed90ce5 WHIRLPOOL 26aab9604529e2b746650b50ae1c511908056b1e2b068a658bb5b5d28b65049e9af63f6433fe6265f316813c22019045cf4d304d0c97e06acca1deb34abd6093
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iF4EAREIAAYFAlDWSNsACgkQC77qH+pIQ6TBfAEAi+PGP6Q1ru+By2CLnR0EKaIx
-v0uHYqlnL8UQJC3UPtoBAJjgWXf8wvgbOEY6ez1G74QiHl2Fyg2upA8yNQmKmRDZ
-=d33X
+iF4EAREIAAYFAlPEhv4ACgkQC77qH+pIQ6RSHAD8DjJOPaTzHWh0/E7K8RqDgaa1
+gbEwOjYWReINCw+O/REA/RXBZjXEDqldT4ATSUSC+IdXBNwd0xQt7wyw9GNTCot4
+=mMdu
 -----END PGP SIGNATURE-----
