@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/open-vcdiff
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/open-vcdiff/ChangeLog,v 1.5 2012/12/22 23:57:14 floppym Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/open-vcdiff/ChangeLog,v 1.6 2014/07/15 01:42:21 floppym Exp $
+
+*open-vcdiff-0.8.4 (15 Jul 2014)
+
+  15 Jul 2014; Mike Gilbert <floppym@gentoo.org> +open-vcdiff-0.8.4.ebuild:
+  Version bump.
 
   22 Dec 2012; Mike Gilbert <floppym@gentoo.org> +files/0.8.3-system-libs.patch,
   -files/open-vcdiff-0.8.3-system-zlib.patch, open-vcdiff-0.8.3.ebuild:
